2009-09-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix command names.

2009-09-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* Framework/Carbon.cs:
	* MacPlatform.addin.xml: Add command handlers for Hide Window
	  and Hide Others.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix casing of addin attribute.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Depend on the Ide addin.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Put the command in the menu.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* Makefile.am:
	* MacPlatform.csproj:
	* MacPlatform.addin.xml: Add a Minimize command.

2009-09-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Change default font to Monaco now that the
	  text editor offset bug is fixed.

2009-09-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Bump GTK+ requirement to 2.17.9 to require
	  client-side windows, which greatly reduces rendering
	  glitches.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MacPlatform.csproj: Updated dependencies. We now depend on
	  gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Implement simple GMarkup stripping for
	  command strings.

2009-07-30  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Fix unhiding of menu items.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Menus/OSXMenu.cs: Tweaks to display some glyphs correctly.

2009-04-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Check GTK# version. Fix default font string.

	* Framework/Carbon.cs: Fix build.

2009-04-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.cs: Use Osaka Regular-Mono font as a workaround